--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second repo</title>
 </head>
 <body>
-    
+    <h1>Assalamu Alaykum</h1>
+    <h2>How are you</h2>
+    <h3>Welcome Here</h3>
 </body>
 </html>
